--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
+    "express": "^4.16.4",
     "vue": "^2.6.11",
-    "express": "^4.16.4"
+    "vue-router": "^3.1.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.2.0",
