--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dogstorian",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "start": "node server.js",
